--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -4,7 +4,8 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   @include border-radius;
   box-shadow: 0 8px 60px 0 rgba(103,151,255,.10), 0 12px 90px 0 rgba(133,255,103,.10);
   padding: 2em;
-  background-color: $color-white;
+  // fix dark mode
+  background-color: revert;
   border-top: 8px solid $tertiary;
   margin-top: .8em;
 }
@@ -17,7 +18,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   width: 500px;
   height: 500px;
   border-radius: 2000px;
-  background: $color-blue;
+  background: $color-square-gradient;
   right: 1px;
   top: -57px;
 }
